--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,14 @@ jobs:
         git push origin upm --tags
       env:
         PKG_ROOT: Assets/SO Architecture
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: $steps.versioning.outputs.version
+        release_name: Release $steps.versioning.outputs.version
+        draft: false
+        prerelease: false
