--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,17 @@ jobs:
     
     - name: split upm branch
       run: |
+        git branch -d upm &> /dev/null || echo upm branch not found
         git subtree split --prefix="$PKG_ROOT" --branch upm
-        git tag ${{ steps.versioning.outputs.version }} upm
-        git push origin upm --tags
+        git checkout upm
+        if [[ -d "Samples" ]]; then
+          git mv Samples Samples~
+          rm -f Samples.meta
+          git config --global user.name 'github-bot'
+          git config --global user.email 'github-bot@users.noreply.github.com'
+          git commit -am "fix: Samples => Samples~"
+        fi
+        git push -f -u origin upm --tags
       env:
         PKG_ROOT: Assets/SO Architecture
 
