--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
           git config --global user.email 'github-bot@users.noreply.github.com'
           git commit -am "fix: Samples => Samples~"
         fi
+        git tag ${{ steps.versioning.outputs.version }} upm
         git push -f -u origin upm --tags
       env:
         PKG_ROOT: Assets/SO Architecture
