--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       uses: paulhatch/semantic-version@v2
       with:
         # The branch to count commits on
-        branch: "upm"
+        branch: "master"
         # The prefix to use to identify tags
         tag_prefix: ""
         # A string which, if present in a git commit, indicates that a change represents a major (breaking) change
@@ -46,6 +46,10 @@ jobs:
         
         git tag ${{ steps.versioning.outputs.version }} upm
         git push -f -u origin upm --tags
+        
+        git checkout master
+        git tag ${{ steps.versioning.outputs.version }}-master master
+        git push origin master --tags
       env:
         PKG_ROOT: Assets/SO Architecture
 
