--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,11 +36,11 @@ jobs:
         git config --global user.name 'github-bot'
         git config --global user.email 'github-bot@users.noreply.github.com'
         
-        if [[ -d "Samples" ]]; then
-          git mv Samples Samples~
-          rm -f Samples.meta
-          git commit -am "fix: Samples => Samples~"
-        fi
+        #if [[ -d "Samples" ]]; then
+        #  git mv Samples Samples~
+        #  rm -f Samples.meta
+        #  git commit -am "fix: Samples => Samples~"
+        #fi
         sed -i 's/**VERSION**/${{ steps.versioning.outputs.version }}/g' package.json
         git commit -am "fix: Package Version"
         
