Fix formating in package.json

--- a/Assets/SO Architecture/package.json
+++ b/Assets/SO Architecture/package.json
@@ -5,18 +5,30 @@
     "version": "VERSION",
     "unity": "2019.2",
     "license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/PauloHMattos/ScriptableObject-Architecture.git"
+	},
+	"author": "Daniel Everland + Paulo Mattos",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/PauloHMattos/ScriptableObject-Architecture/issues"
+	},
+	"homepage": "https://github.com/PauloHMattos/ScriptableObject-Architecture",
+  
     "dependencies": 
     {
-    }
-	"samples": [
-    {
-      "displayName": "Pong",
-      "description": "Clone of the classic pong from 1972",
-      "path": "Samples~/Pong"
     },
-    {
-      "displayName": "Jetpack Joyride",
-      "description": "Simple clone from the mobile game Jetpack Joyride",
-      "path": "Samples~/Jetpack"
-    }
+	"samples": [
+		{
+		  "displayName": "Pong",
+		  "description": "Clone of the classic pong from 1972",
+		  "path": "Samples~/Pong"
+		},
+		{
+		  "displayName": "Jetpack Joyride",
+		  "description": "Simple clone from the mobile game Jetpack Joyride",
+		  "path": "Samples~/Jetpack"
+		}
+	]
 }
