--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.analytics": "3.3.4",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.purchasing": "2.0.6",
+    "com.unity.test-framework.performance": "2.0.6-preview",
     "com.unity.timeline": "1.2.9",
     "com.unity.xr.legacyinputhelpers": "2.0.2",
     "com.unity.modules.ai": "1.0.0",
