--- a/Assets/Tests/Editor/Editor.Tests.asmdef
+++ b/Assets/Tests/Editor/Editor.Tests.asmdef
@@ -1,17 +1,20 @@
 {
-    "name": "Tests",
+    "name": "Editor.Tests",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "Unity.PerformanceTesting",
-        "ScriptableObject-Architecture"
+        "ScriptableObject-Architecture",
+        "Unity.PerformanceTesting"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "NSubstitute.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
