Rename assembly definition file

--- a/Assets/Tests/Editor/ScriptableObject-Architecture.Tests.Editor.asmdef
+++ b/Assets/Tests/Editor/ScriptableObject-Architecture.Tests.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Editor.Tests",
+    "name": "ScriptableObject-Architecture.Tests.Editor",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
