Event listeners and observers

--- a/Assets/SO Architecture/ScriptableObject-Architecture.asmdef
+++ b/Assets/SO Architecture/ScriptableObject-Architecture.asmdef
@@ -1,6 +1,8 @@
 {
     "name": "ScriptableObject-Architecture",
-    "references": [],
+    "references": [
+        "GUID:d178ac4b10764814c8ae876ce6354d19"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
@@ -8,5 +10,6 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": []
+    "versionDefines": [],
+    "noEngineReferences": false
 }
