--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.malee.reorderablelist": "https://github.com/cfoulston/Unity-Reorderable-List.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ads": "2.3.1",
     "com.unity.analytics": "3.3.4",
@@ -38,5 +39,11 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
+  },
+  "lock": {
+    "com.malee.reorderablelist": {
+      "revision": "HEAD",
+      "hash": "3bac02ba5dc9ac30fbb17c2b4cf965c415bc1d9f"
+    }
   }
 }
