Remove unused packages

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,12 @@
 {
   "dependencies": {
-    "com.malee.reorderablelist": "https://github.com/cfoulston/Unity-Reorderable-List.git",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.ads": "2.3.1",
-    "com.unity.analytics": "3.3.4",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.purchasing": "2.0.6",
     "com.unity.quicksearch": "1.5.0",
     "com.unity.test-framework.performance": "2.0.6-preview",
     "com.unity.timeline": "1.2.9",
+    "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "2.0.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -40,11 +38,5 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  },
-  "lock": {
-    "com.malee.reorderablelist": {
-      "revision": "HEAD",
-      "hash": "3bac02ba5dc9ac30fbb17c2b4cf965c415bc1d9f"
-    }
   }
 }
