--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.purchasing": "2.0.6",
     "com.unity.quicksearch": "1.5.0",
     "com.unity.test-framework.performance": "2.0.6-preview",
+    "com.unity.testtools.codecoverage": "0.2.2-preview",
     "com.unity.timeline": "1.2.9",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "2.0.2",
