--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,11 +4,11 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.purchasing": "2.0.6",
     "com.unity.quicksearch": "1.5.0",
+    "com.unity.test-framework": "1.1.11",
     "com.unity.test-framework.performance": "2.0.6-preview",
     "com.unity.testtools.codecoverage": "0.2.2-preview",
-    "com.unity.timeline": "1.2.9",
+    "com.unity.timeline": "1.2.10",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.legacyinputhelpers": "2.0.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
